Fix auth endpoints and update
